tests/baselines/reference/privateNamesConstructorChain-1.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNamesConstructorChain-1.ts(6,15): error TS2339: Property '#bar' does not exist on type 'typeof Child'.


==== tests/cases/conformance/classes/members/privateNames/privateNamesConstructorChain-1.ts (1 errors) ====
    class Parent {
        #foo = 3;
        static #bar = 5;
        accessChildProps() {
            new Child().#foo; // OK (`#foo` was added when `Parent`'s constructor was called on `child`)
            Child.#bar;       // Error: not found
                  ~~~~
!!! error TS2339: Property '#bar' does not exist on type 'typeof Child'.
        }
    }
    
    class Child extends Parent {
        #foo = "foo";       // OK (Child's #foo does not conflict, as `Parent`'s `#foo` is not accessible)
        #bar = "bar";       // OK
    }
    